--- a/sass/blocks/_menu-horiz.scss
+++ b/sass/blocks/_menu-horiz.scss
@@ -60,7 +60,7 @@
   	}
 
     .g-nav__submenu {
-      display:block;
+	    visibility: visible;
     }
   }
 }
@@ -75,7 +75,7 @@
   top: 1em;
   left: 0;
   z-index: 2;
-  display:none;
+	visibility: hidden;
 }
 
 .g-nav__submenu__ln {
