--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,6 +34,7 @@
 @import "blocks/tabs";
 @import "blocks/modal";
 @import "blocks/collapse";
+@import "blocks/pages";
 
 // Plugins
 // --------------------------------------------------------------------------
