--- a/sass/blocks/_modal.scss
+++ b/sass/blocks/_modal.scss
@@ -41,6 +41,31 @@
 
 /* @end */
 
+/* @group Modal animation
+  --------------------------------------------------------------------------- */
+
+.js-modal-animated {
+
+	.l-main-aux__inner {
+		-webkit-filter: blur(2px);
+		filter: progid:DXImageTransform.Microsoft.Blur(pixelRadius=2);
+		-webkit-transform: scale(.99);
+		@include transition(all linear 200ms);
+	}
+}
+
+.l-main-aux__inner {
+	-webkit-filter: blur(0);
+	-webkit-transform: scale(1);
+	@include transition(all linear 200ms);
+}
+
+.modal__window {
+	@include transition(all linear 200ms);
+}
+
+/* @end */
+
 /* Modal styles
   --------------------------------------------------------------------------- */
 
