minor fixes. hide-fore-added

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -57,23 +57,11 @@ $h6-font-size: 0.618 * $base-font-size;
 // Crossbrowser font face example
 
 //@font-face {
-//	font-family: 'ALSRublRegular';
-//	src: url('../fonts/ASLRubl/rouble-webfont.eot');
-//	src: url('../fonts/ASLRubl/rouble-webfont.eot?#iefix') format('embedded-opentype'),
-//	url('../fonts/ASLRubl/rouble-webfont.woff') format('woff'),
-//	url('../fonts/ASLRubl/rouble-webfont.ttf') format('truetype'),
-//	url('../fonts/ASLRubl/rouble-webfont.svg#ALSRublRegular') format('svg');
-//	font-weight: normal;
-//	font-style: normal;
-//}
-//
-//@font-face {
 //	font-family: 'MyrPro';
 //	src: url('../fonts/myriad/myriadpro-boldit-webfont.eot');
 //	src: url('../fonts/myriad/myriadpro-boldit-webfont.eot?#iefix') format('embedded-opentype'),
 //	url('../fonts/myriad/myriadpro-boldit-webfont.woff') format('woff'),
-//	url('../fonts/myriad/myriadpro-boldit-webfont.ttf') format('truetype'),
-//	url('../fonts/myriad/myriadpro-boldit-webfont.svg#MyriadProBoldItalic') format('svg');
+//	url('../fonts/myriad/myriadpro-boldit-webfont.ttf') format('truetype');
 //	font-weight: bold;
 //	font-style: italic;
 //}
@@ -83,8 +71,7 @@ $h6-font-size: 0.618 * $base-font-size;
 //	src: url('../fonts/myriad/myriadpro-it-webfont.eot');
 //	src: url('../fonts/myriad/myriadpro-it-webfont.eot?#iefix') format('embedded-opentype'),
 //	url('../fonts/myriad/myriadpro-it-webfont.woff') format('woff'),
-//	url('../fonts/myriad/myriadpro-it-webfont.ttf') format('truetype'),
-//	url('../fonts/myriad/myriadpro-it-webfont.svg#MyriadProItalic') format('svg');
+//	url('../fonts/myriad/myriadpro-it-webfont.ttf') format('truetype');
 //	font-weight: normal;
 //	font-style: italic;
 //}
@@ -94,8 +81,7 @@ $h6-font-size: 0.618 * $base-font-size;
 //	src: url('../fonts/myriad/myriadpro-bold-webfont.eot');
 //	src: url('../fonts/myriad/myriadpro-bold-webfont.eot?#iefix') format('embedded-opentype'),
 //	url('../fonts/myriad/myriadpro-bold-webfont.woff') format('woff'),
-//	url('../fonts/myriad/myriadpro-bold-webfont.ttf') format('truetype'),
-//	url('../fonts/myriad/myriadpro-bold-webfont.svg#MyriadProBold') format('svg');
+//	url('../fonts/myriad/myriadpro-bold-webfont.ttf') format('truetype');
 //	font-weight: bold;
 //	font-style: normal;
 //}
@@ -105,8 +91,7 @@ $h6-font-size: 0.618 * $base-font-size;
 //	src: url('../fonts/myriad/myrproregular-webfont.eot');
 //	src: url('../fonts/myriad/myrproregular-webfont.eot?#iefix') format('embedded-opentype'),
 //	url('../fonts/myriad/myrproregular-webfont.woff') format('woff'),
-//	url('../fonts/myriad/myrproregular-webfont.ttf') format('truetype'),
-//	url('../fonts/myriad/myrproregular-webfont.svg#MyrProRegular') format('svg');
+//	url('../fonts/myriad/myrproregular-webfont.ttf') format('truetype');
 //	font-weight: normal;
 //	font-style: normal;
 //}
