--- a/sass/helpers/_mixins.scss
+++ b/sass/helpers/_mixins.scss
@@ -2,13 +2,13 @@
 //  WAI and W3C support
 //=============================================================================
 
-// Hide from both screenreaders and browsers: h5bp.com/u
+// Hide from both screenreaders and browsers
 @mixin hidden {
 	display: none !important;
 	visibility: hidden;
 }
 
-// Hide only visually, but have it available for screenreaders: h5bp.com/v
+// Hide only visually, but have it available for screenreaders
 @mixin vishidden {
 	border: 0;
 	clip: rect(1px, 1px, 1px, 1px);
@@ -24,7 +24,7 @@
 	}
 }
 
-// Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p
+// Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard
 @mixin vishiddenFocus {
 	&:focus, &:active {
 		clip: auto;
@@ -36,9 +36,19 @@
 	}
 
 }
+
 // Hide visually and from screenreaders, but maintain layout
 @mixin invisible {
 	visibility: hidden;
+}
+
+@mixin linkOffscreen() {
+	text-indent: -9999px;
+	overflow: hidden;
+	text-decoration: none;
+	display: block;
+	font-size: 0;
+	text-align: start;
 }
 
 //============================================================================
@@ -49,13 +59,12 @@
 
 @mixin image-2x($image, $width, $height) {
 	@media (min--moz-device-pixel-ratio: 1.3),
-		(-o-min-device-pixel-ratio: 2.6/2),
-		(-webkit-min-device-pixel-ratio: 1.3), // Google Nexus 7
-		(min-device-pixel-ratio: 1.3),
-		(min-resolution: 1.3dppx) {
-		// on retina, use image that's scaled by 2
-			background-image: url($image);
-			background-size: $width $height;
+	(-o-min-device-pixel-ratio: 2.6/2),
+	(-webkit-min-device-pixel-ratio: 1.3), // Google Nexus 7
+	(min-device-pixel-ratio: 1.3),
+	(min-resolution: 1.3dppx) { // on retina, use image that's scaled by 2
+		background-image: url($image);
+		background-size: $width $height;
 	}
 }
 
@@ -63,7 +72,6 @@
 //	background: url("logo.png") no-repeat;
 //	@include image-2x("logo2x.png", 100px, 25px);
 //}
-
 
 //============================================================================
 //   Create CSS Triangles
@@ -76,7 +84,7 @@
 	display: block;
 	width: 0;
 	height: 0;
-	border: solid   $triangleSize;
+	border: solid $triangleSize;
 	@if ($triangleDirection == top) {
 		border-color: $triangleColor transparent transparent transparent;
 	}
@@ -89,12 +97,20 @@
 	@if ($triangleDirection == right) {
 		border-color: transparent $triangleColor transparent transparent;
 	}
-	// .example { @include css-triangle(5px, #fff, bottom); }
+// .example { @include css-triangle(5px, #fff, bottom); }
 }
 
 // ============================================================================
 //    Vendor prefix Mixins
 //=============================================================================
+
+@mixin vendor($property, $value) {
+	-webkit-#{$property}: $value;
+	-moz-#{$property}: $value;
+	-ms-#{$property}: $value;
+	-o-#{$property}: $value;
+	#{$property}: $value;
+}
 
 @mixin border-radius($radius: 5px) {
 	-moz-border-radius: $radius;
@@ -104,7 +120,7 @@
 	-webkit-background-clip: padding-box;
 }
 
-@mixin box-shadow($bshval: 0 0 4px rgba(0,0,0,0.5)) {
+@mixin box-shadow($bshval: 0 0 4px rgba(black, 0.5)) {
 	-moz-box-shadow: $bshval;
 	-webkit-box-shadow: $bshval;
 	-o-box-shadow: $bshval;
@@ -117,6 +133,20 @@
 	-o-transition: $transition;
 	transition: $transition;
 }
+
+//@mixin rotate($deg: 5deg) { // FIXME test
+//	-webkit-transform: rotate($deg);
+//	-moz-transform: rotate($deg);
+//	-o-transform: rotate($deg);
+//	transform: rotate($deg);
+//}
+//
+//@mixin scale($factor: 0.2) {
+//	-webkit-transform: scale($factor);
+//	-moz-transform: scale($factor);
+//	-o-transform: scale($factor);
+//	transform: scale($factor);
+//}
 
 //.test-class {
 //  @include transition(all ease 300ms);
