--- a/sass/media/_screen.scss
+++ b/sass/media/_screen.scss
@@ -5,13 +5,23 @@
 @import "config";
 @import "helpers/mixins";
 
-@media screen and (min-width:1281px) {
+$wide-desktop: 'min-width:1281px';
+$desktop: 'max-width:1280px';
+$tablet-landscape: 'max-width:1024px';
+$tablet-portraite: 'max-width:768px';
+$small-tablet: 'max-width:600px';
+$smart-phone-landscape: 'max-width:480px';
+$smart-phone-portraite: 'max-width:320px';
+$portraite: 'orientation: portrait';
+$landscape: 'orientation: landscape';
+
+@media screen and ($wide-desktop) {
 	#device-visualizer {
 		background-position: 9px center;
 	}
 }
 
-@media screen and (max-width:1280px) {
+@media screen and ($desktop) {
 /* Desktop */
 /* =========================== main ============================= */
 
@@ -22,7 +32,7 @@
 /* end @media*/
 }
 
-@media screen and (max-width:1024px) {
+@media screen and ($tablet-landscape) {
 /* tablet landscape */
 /* ========================== layout ============================ */
 
@@ -55,7 +65,7 @@
 /* end @media*/
 }
 
-@media screen and (max-width:768px) {
+@media screen and ($tablet-portraite) {
 /* tablet portraite */
 
 /* ========================== layout ============================== */
@@ -127,7 +137,7 @@
 /* end @media*/
 }
 
-@media screen and (max-width:600px) {
+@media screen and ($small-tablet) {
 /* small tablet */
 
 	img, object, embed, video, iframe {
@@ -172,7 +182,7 @@
 /* end @media*/
 }
 
-@media screen and (max-width:480px) {
+@media screen and ($smart-phone-landscape) {
 /* Smart Phone landscape */
 
 /* =========================== basic ============================ */
@@ -218,7 +228,7 @@
 /* end @media*/
 }
 
-@media screen and (max-width:320px) {
+@media screen and ($smart-phone-portraite) {
 /* Smart Phone portraite*/
 /* by default inherit from Smart Phone landskape */
 
@@ -237,4 +247,46 @@
 /* "Retina" display styles */
 
 /* end @media*/
+}
+
+@media  (min--moz-device-pixel-ratio: 1.3),
+	(-o-min-device-pixel-ratio: 2.6/2),
+	(-webkit-min-device-pixel-ratio: 1.3),
+	(min-device-pixel-ratio: 1.3),
+	(min-resolution: 1.3dppx) {
+
+}
+
+/* Orientation targeting */
+
+.i-show_landscape,
+.i-hide_portrait {
+	display: block !important;
+}
+
+.i-hide_landscape,
+.i-show_portrait {
+	display: none !important;
+}
+
+@media screen and ($landscape) {
+	.i-show_landscape,
+	.i-hide_portrait {
+		display: block !important;
+	}
+	.i-hide_landscape,
+	.i-show_portrait {
+		display: none !important;
+	}
+}
+
+@media screen and ($portraite) {
+	.i-show_portrait,
+	.i-hide_landscape {
+		display: block !important;
+	}
+	.i-hide_portrait,
+	.i-show_landscape {
+		display: none !important;
+	}
 }
