FIXED: tabs roles. scroll top. ADDED: Modal js different template

--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -79,6 +79,7 @@ $formRowMargin: 10px;
 		border-color: #777 #ccc #ccc;
 		background: #fff;
 		padding: 0 $inputPadding;
+		margin: 0;
 		height: $inputHeight;
 		line-height: $inputHeight;
 
