--- a/sass/blocks/_modal.scss
+++ b/sass/blocks/_modal.scss
@@ -8,7 +8,9 @@
 /* Modal behavior
   --------------------------------------------------------------------------- */
 
-.modal {}
+.modal {
+	display: none;
+}
 
 .modal__bg {
 	width: 100%;
@@ -39,6 +41,11 @@
 	cursor:pointer;
 }
 
+.l-main-aux {
+	position: relative;
+	z-index: 0; // fadeIn fix
+}
+
 /* @end */
 
 /* @group Modal animation
@@ -48,14 +55,15 @@
 
 	.l-main-aux__inner {
 		-webkit-filter: blur(2px);
-		filter: progid:DXImageTransform.Microsoft.Blur(pixelRadius=2);
-		-webkit-transform: scale(.99);
+		// filter: progid:DXImageTransform.Microsoft.Blur(pixelRadius=2);
+		// -webkit-transform: scale(.99);
 	}
 }
 
 .l-main-aux__inner {
 	-webkit-filter: blur(0);
 	-webkit-transform: scale(1);
+	-webkit-transform: translateZ(0);
 	@include transition(all linear 200ms);
 }
 
@@ -69,11 +77,12 @@
   --------------------------------------------------------------------------- */
 
 .modal {
-	display: none;
+
 }
 
 .modal__bg {
-	background: rgba(0,0,0,0.4);
+	background: #000;
+	opacity: 0.4;
 }
 
 .modal__window {
@@ -83,7 +92,7 @@
 	border-radius: 5px;
 	padding: 1em;
 
-	.ie7-8 & {
+	.ie6-7 & {
 		border: 1px solid #ddd;
 	}
 }
