FIXES: item with

--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -239,7 +239,7 @@ $form-item-padding: 10px;
 
 @each $itemWidth in 50, 100, 145, 200 {
 
-	.form__item_w#{$itemWidth} {
+	.form__item_w-#{$itemWidth} {
 		width: $itemWidth - ($form-item-padding);
 
 		input[type="text"],
@@ -258,7 +258,7 @@ $sbPadding: 2px;
 
 @each $sbWidth in 200 {
 
-	.sb-w#{$sbWidth} {
+	.sb-w-#{$sbWidth} {
 
 		.dropdown,
 		select {
